@@ -11,6 +11,9 @@ Section "InputDevice"
 	#Driver "mtrack"
 	#Driver "mtev"
 	Driver "evdev"
+	#Option "SwapAxes" "on"
+	#Option "InvertX" "off"
+	#Option "InvertY" "on"
 EndSection
 
 Section "Device"
