@@ -183,6 +183,8 @@
     <string name="dialog_title_fbinput_preference">FB: адрес устройства ввода</string>
     <string name="title_fbargs_preference">Опции X-сервера</string>
     <string name="dialog_title_fbargs_preference">FB: опции X-сервера</string>
+    <string name="title_fbrefresh_preference">Принудительное обновление</string>
+    <string name="summary_fbrefresh_preference">Принудительно обновлять фреймбуфер</string>
     <string name="title_fbfreeze_preference">Заморозить Android UI</string>
     <string name="dialog_title_fbfreeze_preference">Заморозить Android UI</string>
     <string name="help_text">\n<b>Справка</b>\n\nПриложение устанавливает выбранный GNU/Linux дистрибутив и запускает его в chroot-контейнере.\n\nПорядок действий:\n1. Получить права суперпользователя (root).\n2. Установить <a href="https://play.google.com/store/apps/details?id=ru.meefik.busybox">BusyBox</a>.\n3. Проверить подключение к интернету.\n4. Указать параметры установки.\n5. Запустить установку (\"Параметры => Установить\").\n6. Дождаться окончания установки.\n7. Запустить контейнер кнопкой \"СТАРТ\".\n8. Подключиться к контейнеру через CLI, SSH, VNC или др.\n\nДополнительную информацию см. в разделе \"О программе\".</string>
